[tool.poetry]
name = "qiskit-aqt-provider"
version = "0.7.0"
description = "Qiskit provider for internal AQT backends"
authors = ["Qiskit Development Team"]
readme = "README.md"
license = "Apache 2.0"
classifiers=[
        "License :: OSI Approved :: Apache Software License",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: MacOS",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering",
    ]
keywords=["qiskit", "sdk", "quantum"]

[tool.poetry.dependencies]
python = "^3.7"
requests = ">=2.19"
qiskit-terra = ">=0.19.2"
typing-extensions = ">=3.6.2"
types-requests = "^2.28.11"

[tool.poetry.dev-dependencies]
pytest = ">=7"
sphinx = ">=5.3"
qiskit-sphinx-theme = ">=1.7.0"
pylint = "=2.13"
mypy = "=0.981"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
